--- a/src/App.css
+++ b/src/App.css
@@ -525,7 +525,7 @@ a {
 .ed_pop_txt {
   font-size: 18px;
   font-weight: 500;
-  width: 25vw;
+  width: 365px;
   word-spacing: 1px;
   font-weight: 500;
   line-height: 24px;
@@ -999,7 +999,7 @@ a {
   font-size: 18px;
   margin-bottom: 10px;
   margin-top: 10px;
-  width: 23vw;
+  /* width: 23vw; */
 }
 
 .stes_crd2 {
